--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         </div>
         <div class="quote-container">
             <div class="quote">
-                <p>"Contemplar con calma</p>
-                <p>Que los innumerables fenómenos son obvios.</p>
-                <p>La naturaleza se revela perfectamente a sí misma."</p>
+                <p>"Contemplar con calma <br> que los innumerables fenómenos son obvios. <br>La naturaleza se revela perfectamente a sí misma."</p>
+
             </div>
         </div>
     </main>
