--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="/index.html">Inicio</a></li>
             <li><a href="/asstes/sections/html/bio.html">Bio</a></li>
+            <li><a href="/asstes/sections/html/obra-exposiciones.html">Obra y Exposiciones</a></li>
             <li><a href="/asstes/sections/html/workshops.html">Workshops</a></li>
             <li><a href="/asstes/sections/html/contact.html">Contacto</a></li>
         </ul>
@@ -42,6 +43,7 @@
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Bio</a></li>
+                    <li><a href="#">Obra y Exposiciones</a></li>
                     <li><a href="#">Workshops</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
